# ChangeLog for app-admin/rsyslog
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.137 2015/03/27 16:28:58 ago Exp $

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> rsyslog-8.7.0-r2.ebuild:
  Stable for amd64, wrt bug #536786

  27 Mar 2015; Ultrabug <ultrabug@gentoo.org> rsyslog-8.7.0-r2.ebuild,
  +files/8-stable/50-rsyslog-add-option-to-disable-valgrind-usage-in-testbench.
  patch:
  disable failing valgrind test by Thomas D.

*rsyslog-8.7.0-r2 (26 Mar 2015)

  26 Mar 2015; Ultrabug <ultrabug@gentoo.org> -rsyslog-8.6.0.ebuild,
  -rsyslog-8.7.0-r1.ebuild, +rsyslog-8.7.0-r2.ebuild,
  +files/8-stable/50-rsyslog-fix-size-based-legacy-config-statements.patch,
  +files/8-stable/50-rsyslog-run-queue-persist-test-only-once.patch:
  stability fixes thx to Thomas D., drop old

*rsyslog-8.7.0-r1 (23 Mar 2015)

  23 Mar 2015; Ultrabug <ultrabug@gentoo.org> -rsyslog-8.7.0.ebuild,
  +rsyslog-8.7.0-r1.ebuild:
  fix some deps and doc building thx to Martin Dummer and Thomas D. fix #542330

*rsyslog-8.7.0 (23 Feb 2015)

  23 Feb 2015; Ultrabug <ultrabug@gentoo.org> +rsyslog-8.7.0.ebuild:
  version bump thx to Thomas D. fix #536784

  23 Feb 2015; Ultrabug <ultrabug@gentoo.org> rsyslog-8.6.0.ebuild:
  fix #533020

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org> rsyslog-8.4.2.ebuild,
  rsyslog-8.6.0.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

*rsyslog-8.6.0 (16 Dec 2014)

  16 Dec 2014; Ultrabug <ultrabug@gentoo.org> +rsyslog-8.6.0.ebuild,
  +files/8-stable/10-respect_CFLAGS-r1.patch:
  version bump wrt #532400 by Thomas D.

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> rsyslog-8.4.2.ebuild:
  Update PostgreSQL dependencies and/or checks to virtual/postgresql.

  17 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> -rsyslog-7.4.4.ebuild,
  -rsyslog-8.4.1.ebuild, -files/7-stable/50-default.conf,
  -files/7-stable/rsyslog.conf,