@@ -17,23 +17,13 @@ DIST rsyslog-8.7.0.tar.gz 2003365 SHA256 c77125b67a623569c9bdca8136b9aac013f1c6f
 DIST rsyslog-doc-8.4.2.tar.gz 4066598 SHA256 21862b046b3504f136f9b8961466f2b248ac315c67de8742bd4a35c599f3dd48 SHA512 cbb46e219af5a7b9c60e3a60a75713f88405f7a4036f9d308f17a06ae8e8db0bdff9eae5807a067b9347a0aad264ef9ed73e6587502df2de412569f6d13b7ff6 WHIRLPOOL 97f4de085bf388523df8fa245607c965b0bfdeb13f28c6659f4a267fccaa9f6f7a898cc2f68822796ad69266e5593297db572a9679c8e20e5bc5fd6d26d067f5
 DIST rsyslog-doc-8.7.0.tar.gz 4105507 SHA256 f131bfb963eed4fe74d7336ee5261876b436004b78994d47523a82c0f7d666a8 SHA512 9b5b6f28a55b58c956ca614301fc9667243d02c321f8b4071264e4040dd8fe79ba7eb5a08912e2a229bdcf12f68eec24f1c65ba7b82ccd60c8e70d34267b8405 WHIRLPOOL 386ad5164768a5a4919ba5acda29f3ef670b78cc9d6845e3c8ee252b43d6622c19c7f8ec1edd7d0f1d111bf2c06d29fb5dbf9af6b46c426932ae6caa0e63c30c
 EBUILD rsyslog-8.4.2.ebuild 9553 SHA256 7a4c84cef6a9dfd89be22ca8736487597acf5ebe022ab6e7fbadd0f30f1e3c44 SHA512 29c00a2bc9c879e75a14af69f82c0a4eb734d82862a5e02c1c194a3aff8191f22ba32afb256683a3e2d68374d89a30b1a16446180f35a6f2ec53d6b1a326ca1f WHIRLPOOL c1624c6f3fe27c233a8193b1ce7010be36f8c8c3ac2c4a4115cd1ff5da78b5b17924ce3a9a72d4190abb9a1415b184da84427c3f2f5b74de99b04ef586d16993
-EBUILD rsyslog-8.7.0-r2.ebuild 11315 SHA256 9b986af6dfe8ab6430e161431e547da36e249d95cc7434c8c6e34de100e03dde SHA512 8beb336ac092842f58d05db0a0f2ccb9ec674f02ee24644f48815dcb6839c2978b1d037cf28d161478fa1108db18a425b643a7b7b3cd9bb1c5f50ce7e20a8f55 WHIRLPOOL 2314c41c5f73dbd364e9e9ea77cf070c055b0daeed43971ebc2f69b09fccc9deb7c79548ec788ec96023c5dd48f73cf50636a0200155e3b195b570a750195319
-MISC ChangeLog 26431 SHA256 82772b3921d749bb0b3ad485736cfd0c14027af1cf98c963316a2e5a5149ee88 SHA512 b9a8de2a159f9af97848a7456ad6f051628071a2de2b4fe4938fb8f43a5097dac2e15b826e6f3d7106a10cb47bb0476c7779a3922f47ee389e5e858d6cc577bc WHIRLPOOL 722dfa6489c39ffa11b955d84543647eb161829e33e19716fe03ea35c2ddca7d640e0b023b247ba726e02af4122a6787389422e1805e648afe7aa79fe3e96711
+EBUILD rsyslog-8.7.0-r2.ebuild 11314 SHA256 ffaa6376b1c1bda0df73d63783de16ab43322e6118be9ef02e59739af57e83c0 SHA512 728e034a8fd4c101f3976364804cbd715ebcc3c73777a69220e2a8fd267b396ef48b16affded4e557e3b28c053e63884933d694836d71a4de8af6585c9ee1f97 WHIRLPOOL 599261101ec0a5539925cf3197eaadf41e2922c4c310688d2995bd7fbec89543df05007625cbd94c24a7ba76e17255316a7f1f1714835366ced3573662bb87f9
+MISC ChangeLog 26537 SHA256 48e398c37b636d8de6c047c2781a713a56dd276f8f6b4645fa9f315f1f881b50 SHA512 7f471ca79dca59985d4e0564eec9624aa01ea2bda48862b5e446f275025dc5c146ced3bad7d1b7ea0b58ff2c89c714e9869c7f0c1a26a014020c342ea3565599 WHIRLPOOL ff5882aace41e8972c5f695619fd5ece27d09297f1b2929adac2cc8562a0daa914a470c26262a32606c67cddbbb527fa14bd072e4baa1bad34434a12d5b41b55
 MISC metadata.xml 2907 SHA256 34ee0914c446e0c687bf670dd78f9a5d622db4e119717e6ac2a0376202a7dc68 SHA512 4dadaaaf210a50813311bfa8b25136bb39ef963f19120ed006e49eb91ef81941790dd51394f13fd9f84fba5bf2e42d456ecac3083cdd7124d1ed1cbd32e2e770 WHIRLPOOL bd06001a2a33427ac323c95c4dda9de66e19b81645ac4c9f428d9cedaa7ba95c819db1208c4ff0d39540c9117f958dc268da55402004a0d4d3262c485d4f2a2b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVFYVLAAoJELp701BxlEWfRwgP/R7kybR8Y677YOjAwQp1/fxd
-duWm0p7jx0mHS1+MbS4aO1LaFecobplucFgv0xCNqtoFUHzX6NUKKSJX+znVIaKZ
-JlMmwHyRI2DTUhzBrgksjebyQcpALDYAyrUwqOFS/B92WtyfQfaUAuL4DQE1WDl5
-mlRJ4Lkm75pANwFl1OHR5rfunSiwPco+tPsow9zMCHHOUMtfPVrHcNBIhpwH7p4M
-f3YkWI17rf9Y1OUFMrQlGNWledkj7NNXDG6lBsGA3YW6p2uyFgTrTL9yTGNReS9g
-iIEtRZK84xHxT/0E4voyD4tpPzZqc8SjPaELB/upCi98b7NLCij0Bwk/olgTmyY2
-gaRB9J7xxw5ltuSvrRclAi/G/EUL25/w13dzRE2Lt6z6uxPB5ZUo4SjcoJs/BzLZ
-U2k137cQHTS85wiVA/kwWi0bRcYbH/I+M6SG46h+RbOk1cf+AtawVUhCXG4T2Cgb
-MVw/6WPMZe8MD2Rge3HiWsnH1bdDr/xGx4UcGPvbHfeHyz5/2VXIJeFg+rr9tlXL
-sqwx0OX0dQcUcdU52qY01z+o2RDtf/FqxIk41EkHjIcfSOqGXVfC6tf/HuaacK0d
-WLiH5u54ILhMGAWAQVwSkzuj7X7l9NSnzZ4pSXt1omDYqzUF8GGBO+PO7OIexHKs
-DR67Hh5cBoNnI8woF++B
-=muJ4
+iEYEAREIAAYFAlUZetgACgkQVWmRsqeSphNq/wCeL45uyFgXfg0G55AGZrV2yhh+
+sGAAmwTbLocR6VkV0bNlETmmSHRGJUBI
+=4xcu
 -----END PGP SIGNATURE-----
