@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/rsyslog-8.7.0-r2.ebuild,v 1.3 2015/03/27 16:28:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/rsyslog-8.7.0-r2.ebuild,v 1.4 2015/03/30 16:33:26 jer Exp $
 
 EAPI=5
 AUTOTOOLS_AUTORECONF=1
@@ -33,7 +33,7 @@ else
 		http://www.rsyslog.com/files/download/${PN}/${P}.tar.gz
 		doc? ( http://www.rsyslog.com/files/download/${PN}/${PN}-doc-${PV}.tar.gz )
 	"
-	KEYWORDS="amd64 ~arm ~hppa ~x86"
+	KEYWORDS="amd64 ~arm hppa ~x86"
 
 	PATCHES+=( "${FILESDIR}"/${BRANCH}/50-rsyslog-run-queue-persist-test-only-once.patch )
 	PATCHES+=( "${FILESDIR}"/${BRANCH}/50-rsyslog-fix-size-based-legacy-config-statements.patch )
