@@ -10,23 +10,13 @@ DIST liblognorm-1.1.0.tar.gz 499355 SHA256 2ddff2ee893c9268e19868f19dc4d8037e3d2
 EBUILD liblognorm-0.3.6.ebuild 691 SHA256 3aebfcfe454da371b47aea732dfef3d4984b592c4153c53e8d7f9598763c4b88 SHA512 2ca01a4986f405ebaf3794bbbb7cac221039e738d942f9edb588cb556f83e23eba3441884dbe3344dd15b86abc67bb46cf87546acfe362de1f824d9192b4b9ad WHIRLPOOL fceabdfc6422fdb80f468d007d8f89756e9a038e9fb5894f4f545d1452d66ab6f731dac6a9c1514b95eecc168b9fddbd08cf739b3aba8edc371c72aaa0360efe
 EBUILD liblognorm-0.3.7.ebuild 776 SHA256 f055251c1b6dd686dbfaa87d939f097f7aaa0f233066db92c2f38a49250f9ff1 SHA512 cd9f770ea1f2168ccb9d3b43a5dcf63c741c098ff7a87bb9223f061b337662e55be31b2a378c09ff39dee51599ca3457ef8d59a793644aeabed2e8afbf0abad4 WHIRLPOOL 2d582e4e20149ad392c7b812b41e8789dab87373dd703b1a4b8777aa69ffce9b60f3e22e8fd509f5b698aa6c7c9e82a883cf476e8fc8501a0062554daf1126a2
 EBUILD liblognorm-1.0.1.ebuild 966 SHA256 db5fde1f68ec1539ffde5648fcb2dfcb67d9d836d77457575294480638cf9f13 SHA512 d3e70fdc418a39544b8ee2b68bb856e959cddf53a266546b4c5f1c1d26a3375b1b18d3aecbb412271ccb0bea2899fed5b3d11b6c528112a8ac9ec984fb853c54 WHIRLPOOL d1d18324906665fd211cf071e1c0614843d5ba0caff7d3a1b0c25b73df4fde557036db9e3663fca6754636c2151efa3541decf27b5c1f3b3769127b03c2b7695
-EBUILD liblognorm-1.1.0.ebuild 1030 SHA256 3cdfafb3406749370c178f5339b14e344b56ad60dbcc9513d44158cb21339b85 SHA512 dbd07210623ad3513177b66e8ffb70132b1229bb4f5eaa9e066b5f69476c7189f9fa40b3a693df1f57eea273eb534797aaee22fec1203c4736902afdf9872213 WHIRLPOOL 81686109fc11abeaeaeb524492184a0497137ce14dcbaa96f83885ac179d8bf3a0ae7ccdfee8edb7f4ab23f44eb4b2e0ac250ef2a45dd31930a2459d5e0027cb
-MISC ChangeLog 5142 SHA256 04c7367894aee08ddef82634db6481848e74dda3356cf9a3ebcbf693fa359ad2 SHA512 f3eb1609210008b66aa32dba018839e0448e39a3f60658be4e30a1af9c660105729d95f6c4b7a358eb0bde75c45bc29d7d7319e94395de465218f04dddcb4245 WHIRLPOOL 9b58d4a2d29b7f43d7a6935b589e587c55737b54955504933063f4e3bc3019980f45a254c98773e0b9e5b23ffe0b1986e372d3cef9f99ecc7ad69afee1cb9fe4
+EBUILD liblognorm-1.1.0.ebuild 1029 SHA256 5ccf1e8f7f30287ebe5b4af2264b1eb84c32e9b6354e824e2e089f7a992cf509 SHA512 7881eb070559c21374b46ad1a7788347f4333b8d28b7b748e1d077f0c452146720346b33f71057eff44ef004eefcdcacc8b3676d74f7935ea4b0c616a8fdf2aa WHIRLPOOL ce9c7a1dfaf534546eb4d87957de5666fa9f56f55a4cd5b73d7329e6095fa945b5cede90fcc8829cd141d06b4c65f18e74abaa5e1721d66a99c4866c8525260d
+MISC ChangeLog 5248 SHA256 7fa0a7d17bb307f4a3def61a378309676c5b2e6dd0ab72cea25acb791e2d3996 SHA512 59d8b5187f534f85eb6a0e6e939eb9beec40db7729bc11e09be22a48229a442ed45e383b09b7a8206e7f7638b3b259c6e7625d058bfb62573e353187a3149b25 WHIRLPOOL 7a7d630c4afc5dfa377da23fd0bdb8558e697bf67f376f3ba228da9ceeec2b890cacbf995c052e5833eda8b3647d8ec9fa56db6e5fafd71e367d76bf97b4259f
 MISC metadata.xml 307 SHA256 1c986d470983173b751b4e065b2b369aeab7952c31e9b419e9f8b0de307924ca SHA512 6305dad4a942c7f0f51bbe91d7f5b78ac6fa1b4b05a09998b2a37537bc3845174d64ee08475924aac0e764bd79b0e166894aafeb6cc34e4225ddbc7965a03b0e WHIRLPOOL 00ef3e80f9b4daf61e1393d8dac378ea83b33ea5283bf5d52af2d854b432c2041d8d5d0dbd8fe9e502299d3bb4852bb58c8c6c44b1e1eabfc8fb3d977da4e035
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVEsJHAAoJELp701BxlEWft+UP/0Y25AGy/b+Dj3fnn6CFnNh0
-F207YU64wBVhNS4ilWIcOX2AAWdfy0eKhsp60CdlFJYVQkLUynKuisrRek5D9ZEg
-OwAjeoL8plhCBdiOHbpu51Uppmj7sCO6jIus+xzfVPlBi49bDxvnzmKBFdAJ7L+I
-BvOJeWPZK+Hbt1M3jx9v0r13334e0Nh3RFcoB63YhaiRCI/rQg7Z8Z+ygJS05l2k
-cNPOlcEem4hI1Ll1u2wqU4LwFv0U0edMyHX3ZA7tXr3WOUO5VqxT5ETsXG9K2A3L
-caIprvsEaO/IdJfYDd3zf4VoalD2Jy8NQZtg3njE6M/1RuZkYohAAtcdy87Bil1o
-LnxYpU9RSLS+0jsQZpmtHMCtZo97VA88MAWDq//Fm5sqVNCPKfhcKz+gLLYoiWw/
-cpEFI6Hx5LLNeNVprOnwJdiTomM1bSHLGumdu5OT/8+g0pQ4pxaV7r5ZmBPBxKth
-lhiuZXGwEVXGFfujhKfwp6mqOeOp0BZLtfz47bFUToFDPC7GSzHPGwxaw3n+9oaD
-kP3NF9T5YAjeqQgaB2dd8lPigpO+qCa13npGxYNEvPhwn+F1CCLUGT7ZgufnM9n3
-DQ/9uAdvqmI56KS6Sm14kaqtNfgNj6InK3dP+qSM8nBfPDjIKAJIL4jiSsW/Hmw6
-M3t7JlzKqUyIgU8b7dJc
-=Tzt/
+iEYEAREIAAYFAlUZerYACgkQVWmRsqeSphO60QCffoPO+2Hl9/Szxegpb75iHC0M
+gF8AnRX2ojE7Z6xhoMYdj0+LjKY5qWFC
+=mudk
 -----END PGP SIGNATURE-----
