@@ -4,10 +4,10 @@ DESCRIPTION=An enhanced multi-threaded syslogd with database support and more
 EAPI=5
 HOMEPAGE=http://www.rsyslog.com/
 IUSE=dbi debug doc elasticsearch +gcrypt jemalloc kerberos mongodb mysql normalize omudpspoof postgres rabbitmq redis relp rfc3195 rfc5424hmac snmp ssl systemd test usertools zeromq
-KEYWORDS=amd64 ~arm ~hppa ~x86
+KEYWORDS=amd64 ~arm hppa ~x86
 LICENSE=GPL-3 LGPL-3 Apache-2.0
 RDEPEND=>=dev-libs/json-c-0.11:= >=dev-libs/libestr-0.1.9 >=dev-libs/liblogging-1.0.1:=[stdlog] >=sys-libs/zlib-1.2.5 dbi? ( >=dev-db/libdbi-0.8.3 ) elasticsearch? ( >=net-misc/curl-7.35.0 ) gcrypt? ( >=dev-libs/libgcrypt-1.5.3:= ) jemalloc? ( >=dev-libs/jemalloc-3.3.1 ) kerberos? ( virtual/krb5 ) mongodb? ( >=dev-libs/libmongo-client-0.1.4 ) mysql? ( virtual/mysql ) normalize? ( >=dev-libs/libee-0.4.0 >=dev-libs/liblognorm-1.1.0:= ) omudpspoof? ( >=net-libs/libnet-1.1.6 ) postgres? ( >=dev-db/postgresql-8.4.20:= ) rabbitmq? ( >=net-libs/rabbitmq-c-0.3.0 ) redis? ( >=dev-libs/hiredis-0.11.0 ) relp? ( >=dev-libs/librelp-1.2.5 ) rfc3195? ( >=dev-libs/liblogging-1.0.1:=[rfc3195] ) rfc5424hmac? ( >=dev-libs/openssl-0.9.8y:= ) snmp? ( >=net-analyzer/net-snmp-5.7.2 ) ssl? ( >=net-libs/gnutls-2.12.23 ) systemd? ( >=sys-apps/systemd-208 ) zeromq? ( >=net-libs/czmq-1.2.0 )
 SLOT=0
 SRC_URI=http://www.rsyslog.com/files/download/rsyslog/rsyslog-8.7.0.tar.gz doc? ( http://www.rsyslog.com/files/download/rsyslog/rsyslog-doc-8.7.0.tar.gz )
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=0a6f06cef05539072824b1c5b9d282a0
+_md5_=74eeeef234795ccf7f7055d23cde6873
