@@ -4,10 +4,10 @@ DESCRIPTION=Fast samples-based log normalization library
 EAPI=5
 HOMEPAGE=http://www.liblognorm.com
 IUSE=debug doc pcre static-libs test
-KEYWORDS=amd64 ~arm ~hppa x86 ~amd64-linux
+KEYWORDS=amd64 ~arm hppa x86 ~amd64-linux
 LICENSE=LGPL-2.1
 RDEPEND=>=dev-libs/libestr-0.1.3 >=dev-libs/json-c-0.11:= pcre? ( >=dev-libs/libpcre-8.35 )
 SLOT=0/1
 SRC_URI=http://www.liblognorm.com/files/download/liblognorm-1.1.0.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=27cf927810f448b85faadfa8d249a820
+_md5_=b7fb6770f10d2a9622597c81f0123447
