@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/rsyslog
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.137 2015/03/27 16:28:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.138 2015/03/30 16:33:26 jer Exp $
+
+  30 Mar 2015; Jeroen Roovers <jer@gentoo.org> rsyslog-8.7.0-r2.ebuild:
+  Stable for HPPA (bug #536786).
 
   27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> rsyslog-8.7.0-r2.ebuild:
   Stable for amd64, wrt bug #536786
